--- a/content/settings.json
+++ b/content/settings.json
@@ -7,5 +7,5 @@
   },
   "github": "Parmicciano/themasternetwork",
   "twitter": "Parmicciano",
-  "defaultBranch": "main"
+  "defaultBranch": "master"
 }
